🐛 Some fixes